--- a/index.html
+++ b/index.html
@@ -1,12 +1,49 @@
 <!DOCTYPE html>
 <html lang="pt-br" dir="ltr">
-  <head>
+   <head>
     <meta charset="utf-8">
-    <title>Segundo G</title>
+    <title>Marianna</title>
     <link rel="stylesheet" href="estilo.css">
   </head>
   <body>
-    <h1>Aluna Marianna</h1>
-    <h2>Turma: primeiro G</h2>
+    <div class="menuPrincipal">
+      <nav>
+        <ul>
+          <li><a href="index.html">STRAY KIDS</a></li>
+          <li><a href="pagina01.html">MEMBROS</a></li>
+          <li><a href="pagina02.html">ÁLBUNS</a></li>
+        </ul>
+      </nav>
+    </div>
+ 
+<div class="conteudo">
+ <h1>Conheça um pouco sobre o grupo sul-coreano Stray Kids</h1>
+<p>
+ Stray Kids é um grupo composto por oito membros atualmente, da empresa JYP Entertainment.Foi formado a partir de um reality show em 2019, debutando em 2018 com a música "District 9". 
+</p>
+<h2>Como foi formado?</h2>
+Stray Kids é um grupo formado por um reality show de 2017 com o mesmo nome, criado pela JYP Entertainment e pela Mnet. É um projeto de estréia de ídolo masculino com o conceito de "trainees VS JYP" para os trainees ganharem sua "sobrevivência". Em 26 de setembro de 2017, um teaser do videoclipe de uma música chamada "Hellevator" foi lançado on-line. A versão completa estava programada para ser lançada em 3 de outubro, mas foi adiada para o dia 6. A música foi lançada mais tarde como single digital em 1 de novembro. Em 2019, o grupo perdeu um integrante por motivos pessoais, ficando agora com apenas 8 membros.
+<p>
+ O Stray Kids também é composto por três sub units: 3RACHA, DanceRacha e VocalRacha. O 3RACHA é composto por Bang Chan (CB97), Changbin (SPEARB) e Han (J.ONE). O DanceRacha é composto por Lee Know, Hyunjin e Felix. Já o VocalRacha, é formado por Seungmin e I.N.
+</p>
+<p>
+   As principais redes sociais do grupo são: Instagram - @realstraykids; Twitter - @Stray_Kids; Youtube - Stray Kids. Além das plataformas digitais de música, como Spotify, Melon, Apple Music, entre outros.
+<p>
+  O nome do fandom do grupo é STAY e anunciado no dia 1º de agosto de 2018 por meio das redes sociais do Stray Kids. O significado do nome “Stay” é “Stray” sem o “r”. O “r” em “Stray” representa a razão, o que significa que seus fãs são a sua razão e tudo o que eles são hoje.  
+</p>
+<p>
+Stray Kids (스트레이 키즈) é formado por Bang Chan, Lee Know, Changbin, Hyunjin, Han, Felix, Seungmin e IN. Clique em "MEMBROS" para conhcê-los!
+</p>
+ <div class="capaRodape">
+  <div id="rodape">
+    &copy;Gabriela e Lorena - 1° G
+  </div>
+ </div>
+
+</div>
+
+
+
+
   </body>
 </html>
