--- a/pagina02.html
+++ b/pagina02.html
@@ -1,22 +1,73 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+<html lang="pt-br" dir="ltr">
+   <head>
+    <meta charset="utf-8">
+    <title>Lorena e Gabriela</title>
     <link rel="stylesheet" href="estilo.css">
-</head>
-<body>
+  </head>
+  <body>
     <div class="menuPrincipal">
       <nav>
-          <ul>
-              <li><a href="index.html">Home</a></li>
-              <li><a href="pagina01.html">Página 01</a></li>
-              <li><a href="pagina02.html">Página 02</a></li>
-          </ul>
+        <ul>
+          <li><a href="index.html">STRAY KIDS</a></li>
+          <li><a href="pagina01.html">MEMBROS</a></li>
+          <li><a href="pagina02.html">ÁLBUNS</a></li>
+        </ul>
       </nav>
     </div>
+ 
+<div class="conteudo">
+ <h1>Confira a discografia do grupo</h1>
+    <h2>Mixtape</h2>
+    Mini álbum de pré-debut (2018)
+    <h2>I am NOT</h2>
+    Mini álbum de debut (2018)
+    <h2>I am WHO</h2>
+    2° Mini álbum (2018)
+    <h2>I am YOU</h2>
+    3° mini álbum (2018)
+    <h2>Clé 1: MIROH</h2>
+    4° mini álbum (2019)
+    <h2>Clé 1: YELLOW WOOD</h2>
+    Álbum especial (2019)
+    <h2>Double Knot</h2>
+    1° single digital (2019)
+    <h2>Clé 1: LEVANTER</h2>
+    5° mini álbum (2019)
+    <h2>MIXTAPE: GONE DAYS</h2>
+    2° single digital (2020)
+    <h2>Step Out of Clé</h2>
+    1° single álbum digital (2020)
+    <h2>SKZ2022</h2>
+    Álbum de compilação (2020)
+    <h2>MIXTAPE: ON TRACK</h2>
+    3° single digital (2020)
+    <h2>TOP (versões em coreano, inglês e japonês)</h2>
+    OST (2020)
+    <h2>GO生</h2>
+    Álbum (2020)
+    <h2>IN生</h2>
+    Álbum repaginado (2020)
+    <h2>ALL IN</h2>
+    1° mini álbum japonês digital (2020)
+    <h2>ALL IN: coreana</h2>
+    4° single digital (2020)
+    <h2>MIXTAPE: 애 (OH)</h2>
+    5° single digital (2021)
+    <h2>NOEASY</h2>
+    2° álbum (2021)
+    <h2>Christma EveL</h2>
+    6° mini álbum (2021)
+    <h2>Going Dumb</h2>
+    6° single digital (2021)
+    <h2>ODDINARY</h2>
+    7° mini álbum (2022)
+    <h2>MIXTAPE: TIME OUT</h2>
+    7° single digital (2022)
+</div>
 
-</body>
+
+
+
+  </body>
 </html>
