--- a/pagina01.html
+++ b/pagina01.html
@@ -9,7 +9,7 @@
     <div class="menuPrincipal">
       <nav>
         <ul>
-          <li><a href="index.html">STRAY KIDS</a></li>
+          <li><a href="index.html">Teen Wolf</a></li>
           <li><a href="pagina01.html">MEMBROS</a></li>
           <li><a href="pagina02.html">ÁLBUNS</a></li>
         </ul>
