--- a/pagina01.html
+++ b/pagina01.html
@@ -10,8 +10,8 @@
       <nav>
         <ul>
           <li><a href="index.html">Teen Wolf</a></li>
-          <li><a href="pagina01.html">MEMBROS</a></li>
-          <li><a href="pagina02.html">ÁLBUNS</a></li>
+          <li><a href="pagina01.html">Membros</a></li>
+          <li><a href="pagina02.html">Temporadas</a></li>
         </ul>
       </nav>
     </div>
