--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     </div>
  
 <div class="conteudo">
- <h1>Conheça um pouco sobre o grupo sul-coreano Stray Kids</h1>
+ <h1>Conheça um pouco sobre a série</h1>
 <p>
- Stray Kids é um grupo composto por oito membros atualmente, da empresa JYP Entertainment.Foi formado a partir de um reality show em 2019, debutando em 2018 com a música "District 9". 
+ Essa serie é uma série sobre pessoas sobrenaturais
 </p>
 <h2>Como foi formado?</h2>
 Stray Kids é um grupo formado por um reality show de 2017 com o mesmo nome, criado pela JYP Entertainment e pela Mnet. É um projeto de estréia de ídolo masculino com o conceito de "trainees VS JYP" para os trainees ganharem sua "sobrevivência". Em 26 de setembro de 2017, um teaser do videoclipe de uma música chamada "Hellevator" foi lançado on-line. A versão completa estava programada para ser lançada em 3 de outubro, mas foi adiada para o dia 6. A música foi lançada mais tarde como single digital em 1 de novembro. Em 2019, o grupo perdeu um integrante por motivos pessoais, ficando agora com apenas 8 membros.
