--- a/pagina01.html
+++ b/pagina01.html
@@ -10,7 +10,7 @@
       <nav>
         <ul>
           <li><a href="index.html">Teen Wolf</a></li>
-          <li><a href="pagina01.html">Membros</a></li>
+          <li><a href="pagina01.html">Personagens e Atores</a></li>
           <li><a href="pagina02.html">Temporadas</a></li>
         </ul>
       </nav>
