--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 <div class="conteudo">
  <h1>Conheça um pouco sobre a série</h1>
 <p>
- A série é voltada para o sobrenatural
+ Teen Wolf é uma série de televisão americana desenvolvida por Jeff Davis para a MTV. A série é vagamente baseada no filme de 1985 de mesmo nome.
 </p>
-<h2></h2>
+<h2>Ela conta sobre um garoto que esta no ensino medio e acaba virando lobisomem</h2>
 Stray Kids é um grupo formado por um reality show de 2017 com o mesmo nome, criado pela JYP Entertainment e pela Mnet. É um projeto de estréia de ídolo masculino com o conceito de "trainees VS JYP" para os trainees ganharem sua "sobrevivência". Em 26 de setembro de 2017, um teaser do videoclipe de uma música chamada "Hellevator" foi lançado on-line. A versão completa estava programada para ser lançada em 3 de outubro, mas foi adiada para o dia 6. A música foi lançada mais tarde como single digital em 1 de novembro. Em 2019, o grupo perdeu um integrante por motivos pessoais, ficando agora com apenas 8 membros.
 <p>
  O Stray Kids também é composto por três sub units: 3RACHA, DanceRacha e VocalRacha. O 3RACHA é composto por Bang Chan (CB97), Changbin (SPEARB) e Han (J.ONE). O DanceRacha é composto por Lee Know, Hyunjin e Felix. Já o VocalRacha, é formado por Seungmin e I.N.
