--- a/index.html
+++ b/index.html
@@ -21,22 +21,11 @@
 <p>
  Teen Wolf é uma série de televisão americana desenvolvida por Jeff Davis para a MTV. A série é vagamente baseada no filme de 1985 de mesmo nome.
 </p>
-<h2>Ela conta sobre um garoto que esta no ensino medio e acaba virando lobisomem</h2>
-Stray Kids é um grupo formado por um reality show de 2017 com o mesmo nome, criado pela JYP Entertainment e pela Mnet. É um projeto de estréia de ídolo masculino com o conceito de "trainees VS JYP" para os trainees ganharem sua "sobrevivência". Em 26 de setembro de 2017, um teaser do videoclipe de uma música chamada "Hellevator" foi lançado on-line. A versão completa estava programada para ser lançada em 3 de outubro, mas foi adiada para o dia 6. A música foi lançada mais tarde como single digital em 1 de novembro. Em 2019, o grupo perdeu um integrante por motivos pessoais, ficando agora com apenas 8 membros.
+<h2>Ela conta sobre um garoto que esta no ensino medio e acaba virando lobisomem e durante as temporadas ele vai conhecendo outras pessoas que tambem faz parte do sobrenatural</h2>
 <p>
- O Stray Kids também é composto por três sub units: 3RACHA, DanceRacha e VocalRacha. O 3RACHA é composto por Bang Chan (CB97), Changbin (SPEARB) e Han (J.ONE). O DanceRacha é composto por Lee Know, Hyunjin e Felix. Já o VocalRacha, é formado por Seungmin e I.N.
-</p>
-<p>
-   As principais redes sociais do grupo são: Instagram - @realstraykids; Twitter - @Stray_Kids; Youtube - Stray Kids. Além das plataformas digitais de música, como Spotify, Melon, Apple Music, entre outros.
-<p>
-  O nome do fandom do grupo é STAY e anunciado no dia 1º de agosto de 2018 por meio das redes sociais do Stray Kids. O significado do nome “Stay” é “Stray” sem o “r”. O “r” em “Stray” representa a razão, o que significa que seus fãs são a sua razão e tudo o que eles são hoje.  
-</p>
-<p>
-Stray Kids (스트레이 키즈) é formado por Bang Chan, Lee Know, Changbin, Hyunjin, Han, Felix, Seungmin e IN. Clique em "MEMBROS" para conhcê-los!
-</p>
  <div class="capaRodape">
   <div id="rodape">
-    &copy;Gabriela e Lorena - 1° G
+    &copy;Marianna - 1° G
   </div>
  </div>
 
