--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br" dir="ltr">
    <head>
     <meta charset="utf-8">
-    <title>Marianna</title>
+    <title>Lorena e Gabriela</title>
     <link rel="stylesheet" href="estilo.css">
   </head>
   <body>
@@ -10,19 +10,30 @@
       <nav>
         <ul>
           <li><a href="index.html">Teen Wolf</a></li>
-          <li><a href="pagina01.html">Personagens e Atores</a></li>
+          <li><a href="pagina01.html">Personagens e AtoresS</a></li>
           <li><a href="pagina02.html">Temporadas</a></li>
         </ul>
       </nav>
     </div>
  
 <div class="conteudo">
- <h1>Conheça um pouco sobre a série</h1>
+ <h1>Conheça um poco sobre a série</h1>
 <p>
- Teen Wolf é uma série de televisão americana desenvolvida por Jeff Davis para a MTV. A série é vagamente baseada no filme de 1985 de mesmo nome.
+  Teen Wolf é uma série de televisão americana desenvolvida por Jeff Davis para a MTV. A série é vagamente baseada no filme de 1985 de mesmo nome.
 </p>
-<h2>Ela conta sobre um garoto que esta no ensino medio e acaba virando lobisomem e durante as temporadas ele vai conhecendo outras pessoas que tambem faz parte do sobrenatural</h2>
+<h2>O que acontece?</h2>
+Ela conta sobre um garoto que esta no ensino medio e acaba virando lobisomem.
 <p>
+  O jovem Scott McCall é estudante do ensino médio no colégio fictício de Beacon Hills e vive como um garoto comum, passando por problemas naturais da juventude. Ao ir caminhar na floresta em busca de um suposto corpo morto, o menino é mordido por um lobisomem. Nos dias seguintes, Scott logo nota as mudanças em seu corpo e nos seus sentidos, concluindo que tornou-se um lobisomem. Ele se esforça para esconder de seus colegas a nova característica, com exceção do melhor amigo Stiles Stilinski, da namorada Allison Argent e do companheiro Derek Hale, com quem conta para enfrentar a nova fase.
+</p>
+<p>
+   As principais redes sociais do grupo são: Instagram - @realstraykids; Twitter - @Stray_Kids; Youtube - Stray Kids. Além das plataformas digitais de música, como Spotify, Melon, Apple Music, entre outros.
+<p>
+  O nome do fandom do grupo é STAY e anunciado no dia 1º de agosto de 2018 por meio das redes sociais do Stray Kids. O significado do nome “Stay” é “Stray” sem o “r”. O “r” em “Stray” representa a razão, o que significa que seus fãs são a sua razão e tudo o que eles são hoje.  
+</p>
+<p>
+Stray Kids (스트레이 키즈) é formado por Bang Chan, Lee Know, Changbin, Hyunjin, Han, Felix, Seungmin e IN. Clique em "MEMBROS" para conhcê-los!
+</p>
  <div class="capaRodape">
   <div id="rodape">
     &copy;Marianna - 1° G
