--- a/pagina02.html
+++ b/pagina02.html
@@ -17,53 +17,22 @@
     </div>
  
 <div class="conteudo">
- <h1>Confira a discografia do grupo</h1>
-    <h2>Mixtape</h2>
-    Mini álbum de pré-debut (2018)
-    <h2>I am NOT</h2>
-    Mini álbum de debut (2018)
-    <h2>I am WHO</h2>
-    2° Mini álbum (2018)
-    <h2>I am YOU</h2>
-    3° mini álbum (2018)
-    <h2>Clé 1: MIROH</h2>
-    4° mini álbum (2019)
-    <h2>Clé 1: YELLOW WOOD</h2>
-    Álbum especial (2019)
-    <h2>Double Knot</h2>
-    1° single digital (2019)
-    <h2>Clé 1: LEVANTER</h2>
-    5° mini álbum (2019)
-    <h2>MIXTAPE: GONE DAYS</h2>
-    2° single digital (2020)
-    <h2>Step Out of Clé</h2>
-    1° single álbum digital (2020)
-    <h2>SKZ2022</h2>
-    Álbum de compilação (2020)
-    <h2>MIXTAPE: ON TRACK</h2>
-    3° single digital (2020)
-    <h2>TOP (versões em coreano, inglês e japonês)</h2>
-    OST (2020)
-    <h2>GO生</h2>
-    Álbum (2020)
-    <h2>IN生</h2>
-    Álbum repaginado (2020)
-    <h2>ALL IN</h2>
-    1° mini álbum japonês digital (2020)
-    <h2>ALL IN: coreana</h2>
-    4° single digital (2020)
-    <h2>MIXTAPE: 애 (OH)</h2>
-    5° single digital (2021)
-    <h2>NOEASY</h2>
-    2° álbum (2021)
-    <h2>Christma EveL</h2>
-    6° mini álbum (2021)
-    <h2>Going Dumb</h2>
-    6° single digital (2021)
-    <h2>ODDINARY</h2>
-    7° mini álbum (2022)
-    <h2>MIXTAPE: TIME OUT</h2>
-    7° single digital (2022)
+ <h1>Resumo de cada temporada</h1>
+    <h2>1° Temporada</h2>
+    Estreou em 5 de junho de 2011 seguindo o MTV Movie Awards e foi concluída em 15 de agosto do mesmo ano.
+    Uma noite, um jovem adolescente de Beacon Hills, Scott McCall, é atacado por um lobo e sai com uma mordida no abdômen. No dia seguinte, ele nota que sua audição, reflexos e velocidade melhoraram. Ele descobre que é um lobisomem. No mesmo dia, ele conhece Allison Argent, uma recém-chegada à cidade. Com a ajuda de seu melhor amigo Stiles e de um misterioso lobisomem, Derek, Scott deve encontrar um equilíbrio entre sua nova identidade como lobisomem e os muitos perigos que isso representa para sua vida adolescente.
+    <h2>2° Temporada</h2>
+    Estreou em 3 de Junho de 2012 e terminou em 13 de Agosto de 2012.A maior parte da segunda temporada se passa ao redor da tentativa do novo Alfa Derek de tentar formar uma alcatéia.A recuperação notável da Lydia do ataque de Peter Hale gera efeitos colaterais incluindo alucinações e períodos de tempo perdido.As esperanças de Jackson de se tornar um lobisomem são destruídas como uma nova criatura aparece e começa a matar os ex-estudantes da escola de Beacon Hills.Scott e Derek fazem uma aliança para lidar com a nova ameaça supernatural.A relação de Scott e Allison é testada primeiro pelos pais dela, proibindo o casal de ficar junto.
+    <h2>3° Temporada (parte A e B)</h2>
+    Estreou em 3 de junho de 2013 e terminou em 24 de março de 2014.
+    Primeira Parte - Jackson Withimore se mudou para Londres, a Alcateia de Alfas Chega a Beacon Hills Atrás de Derek e Scott porém terão de enfrentar uma ameaça poderosa o Darach.
+    Segunda Parte - Agora um Alfa Scott terá de enfrentar os Oni e também um Kitsune negro conhecido como Nogitsune que possuiu Stiles.
+    <h2>4° Temporada</h2>
+    Estreou em 23 de junho de 2014 e terminou em 8 de setembro de 2014.Scott e sua Alcateia vão em busca de Derek no México e descobre que Kate Argent esta viva e não só é uma Nagual como também Sequestrou Derek Hale, ele logo é salvo e então a Alcateia terá que lidar com uma Lista Negra onde suas cabeças estão a premio e lá estão todos os Sobrenaturais de Beacon Hills.
+    <h2>5° Temporada</h2>
+    Estreou em 29 de junho de 2015.Na véspera do primeiro dia de aulas do último ano escolar do ensino médio, Scott e seus amigos enfrentam a possibilidade de um futuro sem os outros,  o grupo precisa enfrentar com os Médicos do Medo, que estão criando híbridos sobrenaturais de forma artificial. E depois, Scott e os seus amigos ainda precisam enfrentam o monstro ressuscitado pelos Médicos do Medo: a francesa Besta de Gévaudan, que é se revela tendo uma história muito ligada à família Argent.
+    <h2>6 Temporada</h2>
+    Estreou em 15 de novembro de 2016.Scott, Stiles, Lydia, Malia e o resto do "bando" estão retornando às aulas em Beacon Hills, para o segundo e último semestre do último ano escolar do ensino médio. as o seu último semestre na escola não vai passar sem problemas, agora o "bando" terá que lidar com os recorrentes desaparecimentos sem explicação que ocorrem na cidade, enquanto se veem em meio a uma antiga lenda, a "Caçada Selvagem", que traz consigo os Cavaleiros Fantasmas, e fora a isso Scott, Lydia e Malia também precisam desvendar o mistério sobre "quem ou o que é Stiles". Após esse ocorrido, o grupo têm que lidar com um monstro misterioso que conseguiu escapar da "Caçada Selvagem", para o qual as pessoas que olharem viram pedra.
 </div>
 
 
