--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
  
 <div class="conteudo">
- <h1>Conheça um poco sobre a série</h1>
+ <h1>Conheça um pouco sobre a série</h1>
 <p>
   Teen Wolf é uma série de televisão americana desenvolvida por Jeff Davis para a MTV. A série é vagamente baseada no filme de 1985 de mesmo nome.
 </p>
