--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   Teen Wolf é uma série de televisão americana desenvolvida por Jeff Davis para a MTV. A série é vagamente baseada no filme de 1985 de mesmo nome.
 </p>
 <h2>O que acontece?</h2>
-Ela conta sobre um garoto que esta no ensino medio e acaba virando lobisomem.
+A série conta sobre um garoto que esta no ensino medio e acaba virando lobisomem.
 <p>
   O jovem Scott McCall é estudante do ensino médio no colégio fictício de Beacon Hills e vive como um garoto comum, passando por problemas naturais da juventude. Ao ir caminhar na floresta em busca de um suposto corpo morto, o menino é mordido por um lobisomem. Nos dias seguintes, Scott logo nota as mudanças em seu corpo e nos seus sentidos, concluindo que tornou-se um lobisomem. Ele se esforça para esconder de seus colegas a nova característica, com exceção do melhor amigo Stiles Stilinski, da namorada Allison Argent e do companheiro Derek Hale, com quem conta para enfrentar a nova fase.
 </p>
