--- a/pagina01.html
+++ b/pagina01.html
@@ -28,10 +28,12 @@ Ele tambem é um personagem principal, sendo o melhor amigo de Soctt McCall.
 É uma personagem principal e Co - Protagonista ao lado de seu primeiro amor Scott McCall e seus Amigos.
     <h2>Peter Hale(Ian Bohen)</h2>
 É um Lobisomem e foi o Principal Antagonista das Temporadas 1 e 4.
-    <h2>Jackson Whittemor(</h2>
+    <h2>Jackson Whittemor(Colton Haynes)</h2>
 Jackson Whittemore foi o grande inimigo de Scott McCall nas temporadas 1 e 2. Ele retornou de Londres para Beacon Hills na segunda metade da 6 ª temporada.
-    <h2>Lydia Martin(</h2>
+    <h2>Lydia Martin(Holland Roden)</h2>
 É uma Co-Protagonista e no inicio da serie era bastante patricinha e arrogante porém bastante inteligente, com o tempo descobre-se uma Banshee e iniciou sua Aventura no mundo Sobrenatural ao lado da alcateia McCall.
+    <h2>Malia Hale/Tate(Shelley Hennig)</h2>
+Ela é uma Co - Protagonista e uma Coiote que apareceu na Temporada 3 da Serie, ela se aliou a Scott e sua Alcateia na Temporada 4. Teve um Relacionamento com Stiles mais acabaram terminando, ajudou Scott a proteger Beacon Hills e mais Tarde se tornou sua Namorada.
      <div class="formacao">
         <img src="foto.png" alt="center">
       </div>
